
pts-core: Allow local/other tests not part of OpenBenchmarking.org to be downloaded from a Phoromatic Server
pts-core: Fixes for make-download-cache sometimes not caching tests/suites
pts-core: Drop the pts_test_notes_manager since pts_test_run_manager already had better capabilities built-in
pts-core: Add dump-phodevi-properties helper to assist in debugging and porting to new platforms
phodevi: Append BIOS version to end of motherboard string
phodevi: Strip invalid chars from BIOS version parsing
phodevi: Reworked property handling

Phoronix Test Suite 7.8.0 Milestone 1
8 January 2018

pts-core: Add meson to external dependencies
pts-core: Other external dependency updates
pts-core: Various minor improvements when running on Docker/containerized
pts-core: Phoroscript interpreter improvements for Windows
pts-core: Allow PTS_WEBSOCKET_PORT environment variable to be used to override WebSocket port when launching Phoromatic Server
phodevi: Add some missing handling around /dev/vd* disks
phodevi: Add BIOS version reporting property

Phoronix Test Suite 7.6.0-Alvdal
7 December 2017

pts-core: Just minor changes

Phoronix Test Suite 7.6.0 Milestone 4
3 December 2017

pts-core: Gentoo external dependency handling updates
pts-core: Better external dependency handling when running on EC2 instances
phodevi: Add new gpu.memory-usage sensor initially supported on NVIDIA

Phoronix Test Suite 7.6.0 Milestone 3
21 November 2017

pts-core: Provide some basic graph size/count reporting on refresh-graphs sub-command
pts-core: make script shebang more portable
pts-core: Various styling updates
pts-core: More demanding debug-self-test
pts-core: Update Fedora's Python packages
pts_Graph: Turn line graphs to horizontal box plots if too much data to graph in space
phodevi: physical CPU core detection count on macOS
phodevi: GPU power consumption sensor support via nvidia-smi
phodevi: NVMe drive temperature reporting on Linux
phodevi: Better memory model detection on Linux
